# swift-shlib-cxx-exe

./: CMakeLists.txt  README.md
cmake/: InitializeSwift.cmake
exe/: CMakeLists.txt  main.cpp
shlib/: CMakeLists.txt  Color.cpp  Color.h  Color.swift  module.modulemap
